# hf-serving

./: .travis.yml  Dockerfile  README.md  pyproject.toml
.circleci/: config.yml
hf_serving/: __main__.py  config.py
hf_serving/pipeline/: main.py
hf_serving/pipeline/specs/: __init__.py  base.py  summarization.py  translation.py
hf_serving/pipeline/types/: __init__.py  base.py  summarization.py
scripts/: build-image.sh  push-image.sh
