[tool.poetry]
name = "hf-serving"
version = "0.1.0"
description = "Containerized HuggingFace NLP models"
authors = ["Evan Peterson <evanpeterson17@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
transformers = "^4.11.3"
torch = "^1.9.1"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
